--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -137,10 +137,6 @@ footer {
         display: none;
     }
 
-    a {
-        font-size: 4vw;
-    }
-
     .marquee {
         margin-top: 16px;
 
